@@ -1,3 +1,8 @@
+2005-07-18  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* bugfix: block signals when creating child threads to avoid multiple
+	reception problems
+
 2005-07-15  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: split directory src/ into libwzd-core/ and wzdftpd/
